scss/pages/_question-1.scss
.question-wrapper {
	@include span-columns(8);
	@include shift(2);
	border-style: solid solid none;
	border-width: 1px 1px 0px;
	border-color: rgba(255, 255, 255, 0.2);
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
	background-color: rgba(0, 0, 0, 0.8);

	@include media($tablet) {
		@include span-columns(4);
		@include shift(0);
		text-align: center;
		padding: 20px 10px;
		border-style: none none solid;
		border-width: 0px 0px 1px;
		border-top-left-radius: 0px;
		border-top-right-radius: 1px;
	}
}

.dropcap {
	@include span-columns(2);
	font-family: $font-family--secondary;
	text-align: right;
	padding: 10px 0;

	@include media($tablet) {
		@include span-columns(4);
		text-align: center;
		padding: 0;
	}
}

.question-text {
	@include span-columns(10);
	font-size: 18px;
	line-height: 27px;
	text-align: left;
	padding: 30px 0;
	
	@include media($tablet) {
		@include span-columns(4);
		text-align: center;
		padding: 0;
	}

	p {
		max-width: 30em;
		margin: 0 auto;
	}
}

.answer-form {
	margin: 10px 0;
	padding: 0 5%;
	font-size: em(18);
}

.answer-form-success {
	margin-right: 60px;
	margin-left: 60px;
	margin-bottom: 20px;
	padding: 15px 0;
	border-radius: 3px;
	background-color: #35b557;
	text-transform: uppercase;
	text-align: center;
	font-size: em(14);
	font-weight: 700;
	display: none;

	@include media($tablet) {
		margin: 20px;
	}

	.form-success-text {
		margin: 0;
	}
}

.answer-form-incorrect {
	margin-right: 60px;
	margin-left: 60px;
	margin-bottom: 20px;
	padding: 15px 0;
	border-radius: 3px;
	background-color: #e74c3c;
	text-transform: uppercase;
	text-align: center;
	font-size: em(14);
	font-weight: 700;
	display: none;

	@include media($tablet) {
		margin: 20px;
	}

	.form-success-text {
		margin: 0;
	}
}

.btn-submit {
	display: inline-block;
}

.btn-next {
	display: none;
}

.btn-again {
	display: none;
}

.answer-left, 
.answer-right {
	@include span-columns(6);
	text-align: left;

	@include media($mobile) {
		@include span-columns(2);
		padding-left: 10%;
	}
  }

.answer-right {
	margin-right: 0;
  }

.radio {
	display: inline-block;
	margin-left: 20px;
}

.radio-label {
	display: inline-block;
	margin-left: 20px;
	margin-bottom: 20px;
 }

